Fix: rydder en del i sonar. (#2488)